--- a/src/Components/NawBar/NavBar.css
+++ b/src/Components/NawBar/NavBar.css
@@ -2,6 +2,10 @@
   margin-right: 15px;
 }
 
+Link {
+  margin-right: 10px;
+}
+
 @media (max-width: 992px) {
   .log {
     margin: 10px 10px 0 10px;
